--- a/compose.yml
+++ b/compose.yml
@@ -5,23 +5,34 @@ services:
     build:
       context: .
       dockerfile: ui/Dockerfile
-    ports:
-      - "3000:3000"
     environment:
-      - VITE_WS_URL=ws://server:8080/ws
-    depends_on:
-      - server
+      - VITE_WS_URL=wss://battlewordle.app/ws
     networks:
       - battle-wordle-network
+    restart: always
 
   server:
     build:
       context: .
       dockerfile: server/Dockerfile
-    ports:
-      - "8080:8080"
     networks:
       - battle-wordle-network
+    restart: always
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/nginx/ssl:/etc/nginx/ssl
+    depends_on:
+      - ui
+      - server
+    networks:
+      - battle-wordle-network
+    restart: always
 
 networks:
   battle-wordle-network:
