--- a/compose.yml
+++ b/compose.yml
@@ -26,7 +26,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - /etc/nginx/ssl:/etc/nginx/ssl
+      - ./certbot/www:/var/www/certbot:ro
+      - ./certbot/conf:/etc/nginx/ssl:ro
     depends_on:
       - ui
       - server
