--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: ui/Dockerfile
     environment:
-      - VITE_WS_URL=wss://battlewordle.app/ws
+      - VITE_WS_URL=ws://battlewordle.app/ws
     networks:
       - battle-wordle-network
     restart: always
@@ -23,11 +23,8 @@ services:
     image: nginx:alpine
     ports:
       - "80:80"
-      - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./certbot/www:/var/www/certbot:ro
-      - ./certbot/conf:/etc/nginx/ssl:ro
     depends_on:
       - ui
       - server
