--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     # UI static files
     location / {
-        proxy_pass http://ui;
+        proxy_pass http://ui:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -19,16 +19,5 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
-    }
-
-    # Enable gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # Cache static assets
-    location /assets/ {
-        proxy_pass http://ui;
-        expires 1y;
-        add_header Cache-Control "public, no-transform";
     }
 } 
