--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,20 @@
+# Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    server_name _;
+    server_name battlewordle.app www.battlewordle.app;
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl;
+    server_name battlewordle.app www.battlewordle.app;
+
+    # SSL configuration
+    ssl_certificate /etc/nginx/ssl/live/battlewordle.app/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/battlewordle.app/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     # UI static files
     location / {
@@ -20,4 +34,4 @@ server {
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
     }
-} 
+}
