--- a/compose.yml
+++ b/compose.yml
@@ -23,8 +23,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - /etc/letsencrypt:/etc/nginx/ssl:ro
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./certbot/conf:/etc/nginx/ssl:ro
     depends_on:
       - ui
       - server
