--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,6 +26,16 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # API endpoints
+    location /api/ {
+        proxy_pass http://server:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # WebSocket and API endpoints
     location /ws {
         proxy_pass http://server:8080;
