--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,9 @@ services:
       context: .
       dockerfile: ui/Dockerfile
     environment:
-      - VITE_WS_URL=wss://battlewordle.app/ws  # Note: changed to wss:// for secure WebSocket
+      - NODE_ENV=${NODE_ENV}
+      - VITE_WS_URL=${VITE_WS_URL}
+      - VITE_API_URL=${VITE_API_URL}
     networks:
       - battle-wordle-network
     restart: always
@@ -13,6 +15,11 @@ services:
     build:
       context: .
       dockerfile: server/Dockerfile
+    environment:
+      - ENV=${ENV}
+      - PORT=${PORT}
+      - DB_PATH=${DB_PATH}
+      - PROJECT_ROOT=/app
     networks:
       - battle-wordle-network
     restart: always
@@ -20,8 +27,8 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
-      - "443:443"
+      - "${HTTP_PORT}:80"
+      - "${HTTPS_PORT}:443"
     volumes:
       - /etc/letsencrypt:/etc/nginx/ssl:ro
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
