--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    # UI static files - handle root path
+    # UI static files
     location / {
         proxy_pass http://ui:3000;
         proxy_http_version 1.1;
