--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
       dockerfile: ui/Dockerfile
+    ports:
+      - "3000:3000"
     environment:
       - NODE_ENV=${NODE_ENV}
       - VITE_WS_URL=${VITE_WS_URL}
@@ -15,6 +17,8 @@ services:
     build:
       context: .
       dockerfile: server/Dockerfile
+    ports:
+      - "8080:8080"
     environment:
       - ENV=${ENV}
       - PORT=${PORT}
