--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,12 +4,12 @@ server {
 
     # UI static files - handle root path
     location / {
-        proxy_pass http://ui:3000;
+        proxy_pass http://ui;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # API endpoints
