--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -16,10 +16,19 @@ COPY ui/ .
 RUN npm run build
 
 # Production stage
-FROM nginx:alpine
+FROM node:20-alpine
 
-COPY --from=builder /app/build /usr/share/nginx/html
-COPY ui/nginx.conf /etc/nginx/conf.d/default.conf
+WORKDIR /app
 
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"] 
+# Copy built files from builder
+COPY --from=builder /app/build ./build
+COPY --from=builder /app/package*.json ./
+
+# Install production dependencies only
+RUN npm install --production
+
+# Expose the port the app runs on
+EXPOSE 3000
+
+# Start the app
+CMD ["node", "build"] 
