nginx config revert

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,22 @@
+# Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    server_name localhost;
+    server_name battlewordle.app www.battlewordle.app;
+    return 301 https://$host$request_uri;
+}
 
-    # UI static files - handle root path
+# HTTPS server
+server {
+    listen 443 ssl;
+    server_name battlewordle.app www.battlewordle.app;
+
+    # SSL configuration
+    ssl_certificate /etc/nginx/ssl/live/battlewordle.app/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/battlewordle.app/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # UI static files
     location / {
         proxy_pass http://ui:3000;
         proxy_http_version 1.1;
@@ -22,7 +36,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # WebSocket endpoint
+    # WebSocket and API endpoints
     location /ws {
         proxy_pass http://server:8080;
         proxy_http_version 1.1;
@@ -37,4 +51,4 @@ server {
         proxy_read_timeout 300s;
         proxy_send_timeout 300s;
     }
-} 
+}
